assets/stylesheets/application.scss
@import 'bourbon';
@import "globals/variables";
@import "components/reset";
@import url(http://fonts.googleapis.com/css?family=Arvo);

html {
	//border-left: 4px solid $link-color;
}

a {
	text-decoration: none;
	color: $link-color;

	&:hover {
		border-bottom: 1px solid;
	}
}

p {
	margin: 0.5em 0;

	&.no-margin {
		margin: 0;
	}
}

em {
	font-style: italic;
}

mark {
	border-radius: 2px;
	background-color: #fffdcc;
	font-style: normal;
}

search-mark {
  border-radius: 2px;
  background-color: #fff0f4;
  font-style: normal;
}

strong {
	font-weight: 600;
}

body {
	padding: 0 15px;
	color: $text-color;
	background: #fff;
	font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', sans-serif;
	font-size: 17px;
}

nav.header {
	max-width: $max-width;
	margin: 1em auto 3em;
	text-align: left;
	border-bottom: 2px solid $title-color;
	font-family: 'Arvo';
	font-size: 2em;

	& h1 {
		padding: 0;
		font-size: 1.2em;

		&.navigation {
			display: inline;
			float: right;
			text-align: right;
			border-bottom: none;
			font-size: 0.7em;
			line-height: 1.75em;

			& a {
				&:nth-child(2) {
					padding: 0 20px;
				}
			}
		}
	}

	& a {
		@include transition(color, 0.3s);
		color: $title-color;
		line-height: 1.25em;

		&:hover {
			color: $link-color;
			border-bottom: 0px;
		}
	}
}

header a {
	@include transition(color, 0.3s);
}

a {
	@include transition(border, 0.3s);
}

section {
	max-width: 700px;
	margin: 0 auto;
}

form.search {
	display: inline;

	& input.search {
		padding: 5px;
		color: $gray-color;
		border: 1px solid $gray-color;
		border-radius: 2px;
		outline-width: 5px;
		outline-color: rgba(18.00, 168.00, 218.00, 0.4);
		font-family: inherit;
		font-size: inherit;
	}
}

footer {
	max-width: $max-width;
	margin: 2.5em auto;
	text-align: center;
	color: $gray-color;
	line-height: 2em;

	& div {
			margin: 1em 0;
	}

	& a {
		color: $link-color;

		&.rss {
			color: $text-color;
		}

		&:hover {
			color: $link-color;
		}
	}

	&.privacy-policy {
		height: 0;
		margin: 0 auto;

		& div {
			margin-top: 1em;
			margin-bottom: 0;
		}
	}
}

@media screen and (max-width: 475px) {
	nav.header {
		margin-bottom: 1.2em;
		text-align: center;
		border-bottom: none;

		& h1 {
			border-bottom: 2px solid $title-color;
		}

		& h1.navigation {
			float: none;
		}
	}


}


@media screen and (max-width: 430px) {
	img.project-screenshot {
		display: none;
	}
}

@media screen and (max-width: 356px) {
	nav.header {
		font-size: 1.8em;

		& a {
			line-height: 1.5em;
		}
	}
}

@media screen and (max-width: 325px) {
	nav.header {
		font-size: 1.55em;

		& a {
			line-height: 1.25em;

			&:nth-child(2) {
				padding: 5px;
			}
		}
	}
}


@import "components/syntax";
@import "components/pygments";
@import "components/pagination";
@import "sections/posts";

